--- a/.github/workflows/terraform_plan.yaml
+++ b/.github/workflows/terraform_plan.yaml
@@ -15,7 +15,10 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.aws_key_production }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_production }}
         AWS_REGION: ${{ secrets.aws_region_production }}
-      run: ./scripts/infra plan
+        GOOGLE_SHEETS_PRIVATE_KEY: ${{ secrets.google_sheets_private_key }}
+        GOOGLE_SHEETS_PROJECT_EMAIL: ${{ secrets.google_sheets_project_email }}
+      run: ./scripts/infra plan -var "google_sheets_private_key=${GOOGLE_SHEETS_PRIVATE_KEY}" \
+                                -var "google_sheets_project_email=${GOOGLE_SHEETS_PROJECT_EMAIL}"
     - name: Plan staging
       if: github.base_ref == 'staging'
       env:
@@ -23,7 +26,10 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.aws_key_staging }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_staging }}
         AWS_REGION: ${{ secrets.aws_region_staging }}
-      run: ./scripts/infra plan
+        GOOGLE_SHEETS_PRIVATE_KEY: ${{ secrets.google_sheets_private_key }}
+        GOOGLE_SHEETS_PROJECT_EMAIL: ${{ secrets.google_sheets_project_email }}
+      run: ./scripts/infra plan -var "google_sheets_private_key=${GOOGLE_SHEETS_PRIVATE_KEY}" \
+                                -var "google_sheets_project_email=${GOOGLE_SHEETS_PROJECT_EMAIL}"
     - name: Plan dev
       if: github.base_ref == 'dev'
       env:
@@ -31,5 +37,8 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.aws_key_dev }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_dev }}
         AWS_REGION: ${{ secrets.aws_region_dev }}
-      run: ./scripts/infra plan
+        GOOGLE_SHEETS_PRIVATE_KEY: ${{ secrets.google_sheets_private_key }}
+        GOOGLE_SHEETS_PROJECT_EMAIL: ${{ secrets.google_sheets_project_email }}
+      run: ./scripts/infra plan -var "google_sheets_private_key=${GOOGLE_SHEETS_PRIVATE_KEY}" \
+                                -var "google_sheets_project_email=${GOOGLE_SHEETS_PROJECT_EMAIL}"
 
