--- a/docker-compose-develop.yml
+++ b/docker-compose-develop.yml
@@ -4,7 +4,7 @@ services:
     build: .
     ports:
       - "4401:4401"
-    container_name: gfw-forms-develop
+    container_name: fw-forms-develop
     environment:
       PORT: 4401
       NODE_PATH: app/src
@@ -19,7 +19,6 @@ services:
       S3_ACCESS_KEY_ID: <key>
       S3_SECRET_ACCESS_KEY: <key>
       S3_BUCKET: <key>
-      FASTLY_ENABLED: "false"
     command: develop
     volumes:
       - ./app:/opt/gfw-forms-api/app
