--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/gfw-api/gfw-forms-api#readme",
   "dependencies": {
     "aws-sdk": "^2.18.0",
+    "axios": "^0.24.0",
     "bunyan": "1.7.1",
     "cartodb": "0.4.0",
     "co": "4.6.0",
