--- a/docker-compose-develop.yml
+++ b/docker-compose-develop.yml
@@ -19,7 +19,6 @@ services:
       S3_ACCESS_KEY_ID: <key>
       S3_SECRET_ACCESS_KEY: <key>
       S3_BUCKET: <key>
-    command: develop
     volumes:
       - ./app:/opt/gfw-forms-api/app
     depends_on:
@@ -27,6 +26,8 @@ services:
     networks:
       - gfw-forms-network
       - gfw-network
+    command: node node_modules/.bin/grunt --gruntfile app/Gruntfile.js
+
   mongo:
     image: mongo:3.4
     container_name: gfw-forms-mongo
@@ -37,6 +38,7 @@ services:
     restart: always
     networks:
       - gfw-forms-network
+
 networks:
   gfw-forms-network:
     name: gfw-forms-network
