--- a/package.json
+++ b/package.json
@@ -56,12 +56,15 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
+    "@3sidedcube/prettier-config": "^1.0.0",
     "chai": "^4.2.0",
     "chai-datetime": "^1.7.0",
     "chai-http": "^4.3.0",
-    "eslint": "^7.10.0",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-mocha": "^8.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "grunt": "^1.3.0",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-clean": "^2.0.0",
@@ -75,6 +78,8 @@
     "mocha": "^8.1.3",
     "nock": "^13.0.4",
     "nyc": "^15.1.0",
+    "prettier": "^2.5.1",
     "sinon": "^9.0.3"
-  }
+  },
+  "prettier": "@3sidedcube/prettier-config"
 }
