DB_SECRET now matches production string

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -11,8 +11,7 @@ services:
       NODE_ENV: test
       SUPPRESS_NO_CONFIG_WARNING: "true"
       MONGO_PORT_27017_TCP_ADDR: mongo
-      DB_USERNAME: admin
-      DB_SECRET_PASSWORD: password
+      DB_SECRET: '{ "username": "admin", "password": "password" }'
       DB_DATABASE: gfw_forms
       CT_URL: http://127.0.0.1:9000
       LOCAL_URL: http://127.0.0.1:4400
