--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/gfw-api/gfw-forms-api#readme",
   "dependencies": {
     "@koa/cors": "^3.1.0",
+    "@sentry/node": "^6.18.2",
     "aws-sdk": "^2.18.0",
     "axios": "^0.24.0",
     "bunyan": "1.7.1",
