--- a/package.json
+++ b/package.json
@@ -81,9 +81,10 @@
     "chai-datetime": "^1.7.0",
     "chai-http": "^4.3.0",
     "concurrently": "^7.1.0",
-    "eslint": "^8.8.0",
+    "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^26.1.4",
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
