--- a/docker-compose-develop.yml
+++ b/docker-compose-develop.yml
@@ -23,14 +23,13 @@ services:
       S3_BUCKET: <key>
     volumes:
       - ./app:/opt/gfw-forms-api/app
-      - ./nodemon.json:/opt/gfw-forms-api/nodemon.json # Change NAME to the value of $NAME in the Dockerfile
+      - ./nodemon.json:/opt/gfw-forms-api/nodemon.json
     command: yarn dev
     depends_on:
       - mongo
     networks:
       - gfw-forms-network
       - gfw-network
-    #command: node node_modules/.bin/grunt --gruntfile app/Gruntfile.js
 
   docs:
     build: .
@@ -77,7 +76,7 @@ services:
       S3_SECRET_ACCESS_KEY: <key>
       S3_BUCKET: <key>
     volumes:
-      - ./app:/opt/gfw-forms-api/app    # Change NAME to the value of $NAME in the Dockerfile
+      - ./app:/opt/gfw-forms-api/app
       - ./nodemon.json:/opt/gfw-forms-api/nodemon.json
       - ./jest.config.js:/opt/gfw-forms-api/jest.config.js
     command: yarn test
