--- a/docker-compose-develop.yml
+++ b/docker-compose-develop.yml
@@ -15,6 +15,7 @@ services:
       CT_URL: https://staging-api.resourcewatch.org
       LOCAL_URL: http://127.0.0.1:4401
       TEAMS_API_URL: http://fw-teams-develop:3035/api/v1
+      V3_TEAMS_API_URL: https://dev-fw-api.globalforestwatch.org/v3
       AREAS_API_URL: https://api.resourcewatch.org
       API_API_URL: https://dev-fw-api.globalforestwatch.org/v3/forest-watcher
       WRI_MAIL_RECIPIENTS: <mails>
@@ -72,6 +73,7 @@ services:
       TEAMS_API_URL: http://127.0.0.1:9000
       AREAS_API_URL: http://127.0.0.1:9000
       API_API_URL: https://dev-fw-api.globalforestwatch.org/v3/forest-watcher
+      V3_TEAMS_API_URL: https://dev-fw-api.globalforestwatch.org/v3
       WRI_MAIL_RECIPIENTS: <mails>
       TARGET_SHEET_ID: <sheet>
       S3_ACCESS_KEY_ID: <key>
