--- a/docker-compose-develop.yml
+++ b/docker-compose-develop.yml
@@ -13,10 +13,10 @@ services:
       MONGO_PORT_27017_TCP_ADDR: mongo
       DB_SECRET: '{ "username": "admin", "password": "password" }'
       DB_DATABASE: gfw_forms
-      CT_URL: https://api.resourcewatch.org
+      CT_URL: https://staging-api.resourcewatch.org
       LOCAL_URL: http://127.0.0.1:4401
       TEAMS_API_URL: http://fw-teams-develop:3035/api/v1
-      AREAS_API_URL: https://api.resourcewatch.org
+      AREAS_API_URL: https://staging-api.resourcewatch.org/v1
       WRI_MAIL_RECIPIENTS: <mails>
       TARGET_SHEET_ID: <sheet>
       S3_ACCESS_KEY_ID: <key>
