--- a/docker-compose-develop.yml
+++ b/docker-compose-develop.yml
@@ -72,8 +72,8 @@ services:
       LOCAL_URL: http://127.0.0.1:4400
       TEAMS_API_URL: http://127.0.0.1:9000
       AREAS_API_URL: http://127.0.0.1:9000
-      API_API_URL: https://dev-fw-api.globalforestwatch.org/v3/forest-watcher
-      V3_TEAMS_API_URL: https://dev-fw-api.globalforestwatch.org/v3
+      API_API_URL: http://127.0.0.1:9000/v3/forest-watcher
+      V3_TEAMS_API_URL: http://127.0.0.1:9000/v3
       WRI_MAIL_RECIPIENTS: <mails>
       TARGET_SHEET_ID: <sheet>
       S3_ACCESS_KEY_ID: <key>
@@ -83,7 +83,7 @@ services:
       - ./app:/opt/gfw-forms-api/app
       - ./nodemon.json:/opt/gfw-forms-api/nodemon.json
       - ./jest.config.js:/opt/gfw-forms-api/jest.config.js
-    command: yarn test:jest --runInBand
+    command: yarn test:jest app/src/routes/v3/answers.spec.js --runInBand
     depends_on:
       - mongo
     networks:
