--- a/docs/fw_forms.yaml
+++ b/docs/fw_forms.yaml
@@ -472,6 +472,7 @@ components:
         public:
           type: boolean
           default: false
+          deprecated: true
         createdAt:
           type: string
           format: date-time
