--- a/docs/fw_forms.yaml
+++ b/docs/fw_forms.yaml
@@ -164,21 +164,6 @@ paths:
       description: ''
       tags:
         - Answers
-  /v3/reports/getAllAnswersForUser:
-    parameters: []
-    get:
-      summary: Get all answers for given report
-      tags:
-        - Answers
-      responses:
-        '200':
-          $ref: '#/components/responses/Answers'
-        '401':
-          $ref: '#/components/responses/Error'
-        '404':
-          $ref: '#/components/responses/Error'
-      operationId: get-all-answers-for-user
-      description: Returns all answers created by a user and all team members of teams the user manages
   '/v3/reports/{reportId}/answers/area/{areaId}':
     parameters:
       - schema:
@@ -714,6 +699,8 @@ components:
           type: string
           format: date-time
           readOnly: true
+        fullName:
+          type: string
       required:
         - report
         - reportName
