--- a/docs/fw_forms.yaml
+++ b/docs/fw_forms.yaml
@@ -188,7 +188,7 @@ paths:
         '404':
           $ref: '#/components/responses/Error'
       operationId: get-answers-for-report-and-area
-      description: ''
+      description: 'Returns all answers a user, and members of the user''s teams, have created for this area of interest'
   '/v1/reports/{reportId}/answers/{id}':
     parameters:
       - schema:
