--- a/docker-compose-develop.yml
+++ b/docker-compose-develop.yml
@@ -76,6 +76,7 @@ services:
       AREAS_API_URL: http://127.0.0.1:9000
       API_API_URL: http://127.0.0.1:9000/v3/forest-watcher
       V3_TEAMS_API_URL: http://127.0.0.1:9000/v3
+      USERS_API_URL: http://127.0.0.1:9000
       WRI_MAIL_RECIPIENTS: <mails>
       TARGET_SHEET_ID: <sheet>
       S3_ACCESS_KEY_ID: <key>
